@@ -18,6 +18,7 @@ gboolean properties_set_config (gint);
 GConfClient *get_gconf_client (void);
 void initialize_gconf (int argc, char *argv[]);
 void gconf_set_theme (gchar *value);
+void gconf_set_background_color (gchar *value);
 void gconf_set_configuration (gchar *value);
 void gconf_set_control_key (gint i, gchar *value);
 void gconf_set_enable_sound (gboolean value);
